Make more pretty

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: archive
 author_profile: true
+header:
+  image: blue-yellow-banner-thin.jpg
+  caption: "Photo credit: [WeGraphics](http://wegraphics.net/downloads/free-ultimate-blurred-background-pack/)"
 ---
 
 {% include base_path %}
