Break the tag cloud into a separate include

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: archive
 author_profile: true
+sidebar:
+  tagcloud: true
 header:
   image: blue-yellow-banner-thin.jpg
   caption: "Photo credit: [WeGraphics](http://wegraphics.net/downloads/free-ultimate-blurred-background-pack/)"
