--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -3,6 +3,8 @@ layout: archive
 permalink: /tags/
 title: "Posts by Tags"
 author_profile: true
+sidebar:
+  tagcloud: true
 ---
 
 {% include base_path %}
